[gd_scene load_steps=8 format=1]

[ext_resource path="res://Pri.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/purisa.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Temoj/Butono_sxveba.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=4]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=5]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Sonoj/97470__egolessdub__keys19.ogg" type="AudioStream" id=7]

[node name="Pri" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1160.0
margin/bottom = 560.0
script/script = ExtResource( 1 )

[node name="Versio" type="Label" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = -470.0
margin/right = 240.0
margin/bottom = -560.0
custom_fonts/font = ExtResource( 2 )
text = "v1.0.0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fontkodo" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -770.0
margin/top = -50.0
margin/right = -1327.0
margin/bottom = -150.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fontkodo"
flat = false

[node name="Atribuoj" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -770.0
margin/top = -130.0
margin/right = -1327.0
margin/bottom = -230.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Atribuoj"
flat = false

[node name="Donaci" type="Button" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -770.0
margin/top = -380.0
margin/right = -1327.0
margin/bottom = -480.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Donaci"
flat = false

[node name="Enveno_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Fontkodo" to="." method="_on_Fontkodo_pressed"]

[connection signal="pressed" from="Atribuoj" to="." method="_on_Atribuoj_pressed"]

[connection signal="pressed" from="Donaci" to="." method="_on_Donaci_pressed"]


